--- a/src/app/pages/order/order.component.scss
+++ b/src/app/pages/order/order.component.scss
@@ -10,6 +10,10 @@
     width: 95%;
 }
 
+.full-width {
+    width: 100%
+}
+
 .bg-green {
     background-color: green !important;
 }
@@ -57,4 +61,15 @@ mat-sidenav-content .container {
 
 .cursor-pointer {
     cursor: pointer !important;
+}
+  
+.bottom-left {
+    background-color: black;
+    position: absolute;
+    bottom: 2px;
+}
+
+.text-prod{
+    color: white;
+    font-size: 10px;
 }
