--- a/src/app/pages/admin-manage-team/admin-manage-team.component.html
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.html
@@ -7,7 +7,9 @@
 <mat-tab-group dynamicHeight name="tabGroup">
   <mat-tab label="รอการอนุมัติ" name="tabWaitApprove">
     <div class="row mb-2 border-bt" *ngIf="waitApprove && waitApprove.length > 0" name="rowTopic">
-      <div class="col-2 mt-3 mb-3" name="colTopic1"></div>
+      <div class="col-2 mt-3 mb-3 text-center" name="colTopic1">
+          <span name="textTopic1">รหัสทีม</span>
+      </div>
       <div class="col-3 mt-3 mb-3 text-center" name="colTopic2">
         <span name="textTopic2">ชื่อทีม</span>
       </div>
