--- a/src/app/pages/admin-manage-team/admin-manage-team.component.html
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.html
@@ -1,33 +1,33 @@
 <div class="row" name="rowHeader">
   <div class="col-12 mt-4 mb-4" name="colHeader">
-    <h4 class="mt-0" name="textHeader">จัดการทีมของสมาชิก</h4>
+    <h4 class="mt-0" name="textHeader">รายชื่อตัวเเทนจำหน่าย</h4>
   </div>
 </div>
 
 <mat-tab-group dynamicHeight name="tabGroup">
   <mat-tab label="รอการอนุมัติ" name="tabWaitApprove">
     <div class="row mb-2 border-bt" *ngIf="waitApprove && waitApprove.length > 0" name="rowTopic">
-      <div class="col-2 mt-3 mb-3 text-center" name="colTopic1">
-          <span name="textTopic1">รหัสทีม</span>
+      <div class="col-2 mt-3 mb-3 text-left" name="colTopic1">
+        <span name="textTopic1" class="color-pink">รหัสทีม</span>
       </div>
-      <div class="col-3 mt-3 mb-3 text-center" name="colTopic2">
-        <span name="textTopic2">ชื่อทีม</span>
+      <div class="col-3 mt-3 mb-3 text-left" name="colTopic2">
+        <span name="textTopic2" class="color-pink">ชื่อทีม</span>
       </div>
-      <div class="col-4 mt-3 mb-3 text-center" name="colTopic3">
-        <span name="textTopic3">รายละเอียดทีม</span>
+      <div class="col-4 mt-3 mb-3 text-left" name="colTopic3">
+        <span name="textTopic3" class="color-pink">รายละเอียดทีม</span>
       </div>
       <div class="col-3 mt-3 mb-3" name="colTopic4"></div>
     </div>
 
     <div class="div-list-style" *ngIf="waitApprove && waitApprove.length > 0" name="divWaitApprove">
       <div class="row border-bt mb-2" *ngFor="let item of waitApprove" name="rowForWaitApprove">
-        <div class="col-2 mt-2 mb-2 text-center text-overflow" name="colCodeteam">
+        <div class="col-2 mt-2 mb-2 text-left text-overflow" name="colCodeteam">
           <span name="item.codeteam">{{item.codeteam}}</span>
         </div>
-        <div class="col-3 mt-2 mb-2  text-center text-overflow" name="colName">
+        <div class="col-3 mt-2 mb-2  text-left text-overflow" name="colName">
           <span name="item.name">{{item.name}}</span>
         </div>
-        <div class="col-4 mt-2 mb-2  text-center text-overflow" name="colDetail">
+        <div class="col-4 mt-2 mb-2  text-left text-overflow" name="colDetail">
           <span name="item.detail">{{item.detail}}</span>
         </div>
         <div class="col-3 mt-2 mb-2  text-center" name="colBtn">
@@ -47,25 +47,27 @@
 
   <mat-tab label="ผ่านการอนุมัติ" name="tabApprove">
     <div class="row mb-2 border-bt" *ngIf="approve && approve.length > 0" name="rowTopic2">
-      <div class="col-2 mt-3 mb-3" name="colTopic5"></div>
-      <div class="col-3 mt-3 mb-3 text-center" name="colTopic6">
-        <span name="textTopic6">ชื่อทีม</span>
+      <div class="col-2 mt-3 mb-3 text-left" name="colTopic5">
+        <span name="textTopic99" class="color-pink">รหัสทีม</span>
       </div>
-      <div class="col-4 mt-3 mb-3 text-center" name="colTopic7">
-        <span name="textTopic7">รายละเอียดทีม</span>
+      <div class="col-3 mt-3 mb-3 text-left" name="colTopic6">
+        <span name="textTopic6" class="color-pink">ชื่อทีม</span>
+      </div>
+      <div class="col-4 mt-3 mb-3 text-left" name="colTopic7">
+        <span name="textTopic7" class="color-pink">รายละเอียดทีม</span>
       </div>
       <div class="col-3 mt-3 mb-3" name="colTopic8"></div>
     </div>
 
     <div class="div-list-style" *ngIf="approve && approve.length > 0" name="divApprove">
       <div class="row border-bt mb-2" *ngFor="let itm of approve" name="rowApprove">
-        <div class="col-2 mt-2 mb-2 text-center text-overflow" name="colCodeteam2">
+        <div class="col-2 mt-2 mb-2 text-left text-overflow" name="colCodeteam2">
           <span name="itm.codeteam">{{itm.codeteam}}</span>
         </div>
-        <div class="col-3 mt-2 mb-2  text-center text-overflow" name="colName2">
+        <div class="col-3 mt-2 mb-2  text-left text-overflow" name="colName2">
           <span name="itm.name">{{itm.name}}</span>
         </div>
-        <div class="col-4 mt-2 mb-2  text-center text-overflow" name="colDetail2">
+        <div class="col-4 mt-2 mb-2  text-left text-overflow" name="colDetail2">
           <span name="itm.detail">{{itm.detail}}</span>
         </div>
         <div class="col-3 mt-2 mb-2  text-center" name="colBtn2">
