--- a/src/app/modal/modal-profile/modal-profile.component.scss
+++ b/src/app/modal/modal-profile/modal-profile.component.scss
@@ -10,3 +10,12 @@
     min-height: inherit;
     max-height: inherit;
 }
+
+::ng-deep .mat-ink-bar {
+    border-radius: 6px !important;
+    position: absolute !important;
+    bottom: 0 !important;
+    height: 48px !important;
+    opacity: 0.3 !important;
+    transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
+}
