--- a/src/app/pages/admin-manage-team/admin-manage-team.component.scss
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.scss
@@ -12,8 +12,21 @@
     border-color: #ff4081;
 }
 
+.color-pink{
+    color: #ff4081 !important;
+}
+
 .text-overflow {
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+::ng-deep .mat-ink-bar {
+    border-radius: 6px !important;
+    position: absolute !important;
+    bottom: 0 !important;
+    height: 48px !important;
+    opacity: 0.3 !important;
+    transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
 }
