--- a/src/app/pages/manage-member/manage-member.component.html
+++ b/src/app/pages/manage-member/manage-member.component.html
@@ -9,7 +9,7 @@
   <div class="col-12 text-center mt-5" *ngIf="dataTeam && dataTeam.status==='waitapprove'" name="colWaitApproveTeam">
     <h3 class=" no-data" name="textWaitApproveTeam">กรุณารอการอนุมัติเพื่อเปิดใช้งานทีมของท่าน</h3>
   </div>
-  <div class="col-12 pr-0 pl-0">
+  <div class="col-12 pr-0 pl-0 mt-3">
     <mat-tab-group *ngIf="dataTeam && dataTeam.status==='approve'">
       <mat-tab label="รอการอนุมัติ" dynamicHeight *ngIf="user==='user' || user ==='owner'">
         <div class="col-12 mt-2 mb-2" *ngIf="dataTeam && dataTeam.status==='approve'" name="colMember">
