--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group dynamicHeight name="tabGroup">
+<mat-tab-group dynamicHeight name="tabGroup" class="mt-3">
   <mat-tab label="รอการเบิก" name="tabWaitWithdrawal">
     <div class="row" name="rowWaitWithdrawal">
       <div class="col-12" *ngIf="waitwithdrawal && waitwithdrawal.length > 0" name="colWaitWithdrawal">
