--- a/src/app/pages/monitor/monitor.component.scss
+++ b/src/app/pages/monitor/monitor.component.scss
@@ -57,3 +57,12 @@
     overflow: hidden !important;
     text-overflow: ellipsis !important;
 }
+
+::ng-deep .mat-ink-bar {
+    border-radius: 6px !important;
+    position: absolute !important;
+    bottom: 0 !important;
+    height: 48px !important;
+    opacity: 0.3 !important;
+    transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
+}
