--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -4,10 +4,10 @@
       <div class="row pl-4 pr-3" name="rowImageProd">
         <div class="col-4 mt-2 pr-0 pl-0 cursor-pointer full-width" style="display: inline;"
           *ngFor="let item of prodData" (click)="openmodal(item)" name="colImageProd">
-          <img class="img-prod-style" [src]="item.image" name="imageProd">
-          <div class="ellipsis bottom-left" style="background-color: rgba(0, 0, 0, 0.5);width: 95%">
-            <p class="ml-1 text-prod mb-0 mt-1">ชื่อ: {{item.name}}</p>
-            <p class="ml-1 text-prod mb-1">ราคา: {{item.price}}</p>
+          <img class="img-prod-style border-image" [src]="item.image" name="imageProd">
+          <div class="ellipsis border-text" style="width: 95%;background-color: white">
+            <p class="ml-1 text-name-prod mb-0 mt-2 ml-2">{{item.name}}</p>
+            <p class="ml-1 text-price-prod mb-2 ml-2">฿{{item.price | number}}</p>
           </div>
         </div>
       </div>
