--- a/src/app/pages/order/order.component.scss
+++ b/src/app/pages/order/order.component.scss
@@ -69,7 +69,27 @@ mat-sidenav-content .container {
     bottom: 2px;
 }
 
-.text-prod{
-    color: white;
-    font-size: 10px;
+.text-name-prod{
+    color: rgb(0, 0, 160);
+    font-size: 14px;
+}
+
+.text-price-prod{
+    font-size: 14px;
+    color: black;
+    font-weight: bold;
+}
+
+.border-image {
+    border: solid 1px lightgray;
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+}
+
+.border-text {
+    border-left: solid 1px lightgray;
+    border-right: solid 1px lightgray;
+    border-bottom: solid 1px lightgray;
+    border-bottom-left-radius: 5%;
+    border-bottom-right-radius: 5%;
 }
