--- a/src/app/modal/modal-max-box/modal-max-box.component.html
+++ b/src/app/modal/modal-max-box/modal-max-box.component.html
@@ -8,12 +8,11 @@
           <th scope="col" width="120">จำนวน</th>
         </tr>
       </thead>
-      <tbody *ngFor="let item of dataReport.reportall.items">
+      <tbody *ngFor="let item of dataProductInbox; let i = index;">
         <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
+          <th scope="row">{{i+1}}</th>
+          <td>{{item.trackno}}</td>
           <td>Otto</td>
-          <td>@mdo</td>
         </tr>
       </tbody>
     </table>
