--- a/src/app/components/header-toolbar/header-toolbar.component.html
+++ b/src/app/components/header-toolbar/header-toolbar.component.html
@@ -6,11 +6,11 @@
     <!-- <span *ngIf="userAuth">
       <mat-icon class="example-icon">notifications</mat-icon>
     </span> -->
-    <span class="profile overflow-text" *ngIf="!userAuth">
+    <!-- <span class="profile overflow-text" *ngIf="!userAuth">
       <span class="user-name" (click)="onLogin()">เข้าสู่ระบบ</span>
       <span class="user-name">/</span>
       <span class="user-name" (click)="onRegister()">สมัครสมาชิก</span>
-    </span>
+    </span> -->
 
     <!-- <span class="profile" *ngIf="userAuth" [matMenuTriggerFor]="profile">
       <img src="https://res.cloudinary.com/dyiuidzsc/image/upload/v1548908205/web-sharing/no-image-user.jpg"
