--- a/src/app/modal/modal-profile/modal-profile.component.html
+++ b/src/app/modal/modal-profile/modal-profile.component.html
@@ -10,19 +10,26 @@
   </div>
   <div class="row mt-4">
     <div class="col-12">
-      <mat-tab-group>
+      <mat-tab-group dynamicHeight>
+        <mat-tab label="ประวัติการสั่งซื้อ">
+          <div class="row">
+            <div class="col-12">
+
+            </div>
+          </div>
+        </mat-tab>
         <mat-tab label="ยอดขายประจำสัปดาห์">
           <div class="row">
             <div class="col-12">
               <chart [type]="typeChart" [data]="dataChart" [options]="optionsChart" style="height: 300px;"></chart>
-
             </div>
           </div>
         </mat-tab>
         <mat-tab label="สินค้าขายดี">
           <div class="row">
             <div class="col-12">
-              <chart [type]="typeChartPie" [data]="dataChartPie" [options]="optionsChartPie" style="height: 300px;"></chart>
+              <chart [type]="typeChartPie" [data]="dataChartPie" [options]="optionsChartPie" style="height: 300px;">
+              </chart>
             </div>
           </div>
         </mat-tab>
