--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -3,9 +3,9 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <div class="row mt-3" style="height: 85vh;" name="rowOrder">
-  <div class="col-6 border-order mr-0" name="colLeft">
+  <div class="col-6 mr-0" name="colLeft">
     <!-- <div class="border-order" style="height: 100%;width: 100%;" name="divProd"> -->
-      <div class="row scroll-y" name="rowImageProd" style="height: 90vh;">
+      <div class="row scroll-y" name="rowImageProd" style="height: 90vh;padding-left: 5px;">
         <div class="col-4 mt-2 pr-0 pl-0 cursor-pointer full-width princing-item" style="display: inline;"
           *ngFor="let item of prodData" (click)="openmodal(item)" name="colImageProd">
           <div class="ellipsis border-prod" style="width: 95%;background-color: white;margin-right: 0px">
