--- a/src/app/modal/modal-max-box/modal-max-box.component.html
+++ b/src/app/modal/modal-max-box/modal-max-box.component.html
@@ -12,7 +12,9 @@
         <tr>
           <th scope="row">{{i+1}}</th>
           <td>{{item.trackno}}</td>
-          <td>Otto</td>
+          <td>
+            {{item.sumQty}}
+          </td>
         </tr>
       </tbody>
     </table>
