--- a/src/app/modal/modal-profile/modal-profile.component.scss
+++ b/src/app/modal/modal-profile/modal-profile.component.scss
@@ -26,5 +26,9 @@
     bottom: 0 !important;
     height: 48px !important;
     opacity: 0.3 !important;
-    transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
+    transition: 0.2s cubic-bezier(.34, 0, .25, 1.3) !important;
+}
+
+.no-data {
+    color: #ccbebe !important;
 }
