--- a/src/app/modal/modal-address/modal-address.component.scss
+++ b/src/app/modal/modal-address/modal-address.component.scss
@@ -30,14 +30,14 @@
 }
 
 ::ng-deep.mat-dialog-container {
-    display: block;
-    padding: 24px;
-    border-radius: 4px;
-    box-sizing: border-box;
-    overflow: auto;
-    outline: 0;
-    width: 100%;
-    height: 100%;
-    min-height: inherit;
-    max-height: inherit;
+    display: block !important;
+    padding: 24px !important;
+    border-radius: 4px !important;
+    box-sizing: border-box !important;
+    overflow: auto !important;
+    outline: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    min-height: inherit !important;
+    max-height: inherit !important;
 }
