--- a/src/app/modal/modal-confirms/modal-confirms.component.scss
+++ b/src/app/modal/modal-confirms/modal-confirms.component.scss
@@ -1,14 +1,14 @@
 ::ng-deep.mat-dialog-container {
-    padding: 0px;
-    overflow: hidden;
-    display: block;
-    border-radius: 4px;
-    box-sizing: border-box;
-    outline: 0;
-    width: 100%;
-    height: 100%;
-    min-height: inherit;
-    max-height: inherit;
+    display: block !important;
+    padding: 24px !important;
+    border-radius: 4px !important;
+    box-sizing: border-box !important;
+    overflow: auto !important;
+    outline: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    min-height: inherit !important;
+    max-height: inherit !important;
 }
 
 .border-bt {
