--- a/src/app/modal/modal-max-box/modal-max-box.component.scss
+++ b/src/app/modal/modal-max-box/modal-max-box.component.scss
@@ -4,5 +4,18 @@
     bottom: 0 !important;
     height: 48px !important;
     opacity: 0.3 !important;
-    transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
+    transition: 0.2s cubic-bezier(.34, 0, .25, 1.3) !important;
+}
+
+::ng-deep.mat-dialog-container {
+    display: block !important;
+    padding: 24px !important;
+    border-radius: 4px !important;
+    box-sizing: border-box !important;
+    overflow: auto !important;
+    outline: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    min-height: inherit !important;
+    max-height: inherit !important;
 }
