--- a/src/app/modal/select-option/select-option.component.scss
+++ b/src/app/modal/select-option/select-option.component.scss
@@ -55,5 +55,18 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 input[type=number] {
-    -moz-appearance:textfield;
+    -moz-appearance: textfield;
+}
+
+::ng-deep.mat-dialog-container {
+    display: block !important;
+    padding: 24px !important;
+    border-radius: 4px !important;
+    box-sizing: border-box !important;
+    overflow: auto !important;
+    outline: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    min-height: inherit !important;
+    max-height: inherit !important;
 }
