--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="content" name="divContent">
-    <div class="row mt-5" name="rowLogin">
-        <div class="col-md-7 col-sm-12 mb-3" name="colImage">
-            <div style="display:block; width: 100%; max-width: 500px;" >
-                <slideshow [imageUrls]="images" [height]="'350px'" [showArrows]="false"
-                    [autoPlay]="true" [autoPlayInterval]="5000" [backgroundSize]="'cover'" [showDots]="true"
+    <div class="row" name="rowLogin">
+        <div class="col-md-7 col-sm-12" name="colImage">
+            <div style="display:block; width: 100%" >
+                <slideshow [imageUrls]="images" [height]="'91.7vh'" [showArrows]="false"
+                    [autoPlay]="true" [autoPlayInterval]="5500" [backgroundSize]="'cover'" [showDots]="true"
                     [dotColor]="'#010101'" [lazyLoad]="true" [autoPlayWaitForLazyLoad]="true" [hideOnNoSlides]="true">
                 </slideshow>
             </div>
