--- a/src/app/modal/modal-remark/modal-remark.component.html
+++ b/src/app/modal/modal-remark/modal-remark.component.html
@@ -16,7 +16,7 @@
 
 <div name="rowbtn" class="row mt-3 mb-3">
   <div name="divBtnCancel" class="col-6 text-right">
-    <button name="btnCancel" class="mr-4" mat-stroked-button color="accent">ยกเลิก</button>
+    <button name="btnCancel" class="mr-4" mat-stroked-button color="accent" (click)="cancel()">ยกเลิก</button>
   </div>
   <div name="divBtnConfirm" class="col-6 text-left">
     <button name="btnConfirm" class="ml-4 border-btn" mat-stroked-button color="accent" (click)="confirm()">ตกลง</button>
