--- a/src/app/pages/order-report-detail/order-report-detail.component.html
+++ b/src/app/pages/order-report-detail/order-report-detail.component.html
@@ -87,6 +87,10 @@
 <div class="row mb-3" name="divRowBtn">
   <div name="divColBtn" class="col-12 text-right">
     <button name="btnBack" mat-stroked-button color="accent" (click)="goBack()">ย้อนกลับ</button>
-    <button name="btnPrint" mat-stroked-button color="accent" class="ml-2">พิมพ์ใบเบิกสินค้า</button>
+    <router-outlet></router-outlet>
+    <p>x</p>
+    <router-outlet name="print"></router-outlet>
+    <button name="btnPrint" mat-stroked-button color="accent" (click)="onPrintInvoice()" class="ml-2">พิมพ์ใบเบิกสินค้า</button>
   </div>
 </div>
+
