--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   </mat-sidenav>
   <div class="container">
     <router-outlet></router-outlet>
+    <router-outlet name="print"></router-outlet>
   </div>
   <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#ff9558" type="ball-atom">
     <p style="font-size: 14px; color: white; margin-top: 14px;">กำลังโหลด...</p>
@@ -19,3 +20,4 @@
     </div>
   </div>
 </footer> -->
+
