--- a/src/app/pages/orderinvoice/orderinvoice.component.html
+++ b/src/app/pages/orderinvoice/orderinvoice.component.html
@@ -1,3 +1,5 @@
-<p>
-  orderinvoice works!
-</p>
+<div class="invoice"
+     *ngFor="let invoice of invoiceIds; let i = index">
+  <h1>Invoice Num. {{ invoice }}</h1>
+  Amount: {{ (invoiceDetails[i] | async)?.amount }}
+</div>
