--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,13 @@ $custom-typography: mat-typography-config(
 body{
     font-family: 'Kanit' !important;
 }
+
+@media print {
+    app-root > * { display: none; }
+    app-root app-print-layout { display: block; }
+  }
+
+  @media print {
+    .isPrinting > * { display: none; }
+    .isPrinting app-print-layout { display: block; }
+  }
