--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,7 @@ $custom-typography: mat-typography-config(
 body{
     font-family: 'Kanit' !important;
 }
+@media print {
+    app-root > * { display: none; }
+    app-root app-print-label { display: block; }
+  }
