--- a/src/app/modal/modal-confirms/modal-confirms.component.html
+++ b/src/app/modal/modal-confirms/modal-confirms.component.html
@@ -1,10 +1,10 @@
-<div name="divRowTitle" class="row ml-1 border-bt">
-  <div name="divColTitle" class="col-12 mt-3 mb-3 text-left">
+<div name="divRowTitle" class="row border-bt">
+  <div name="divColTitle" class="col-12 mt-3 mb-3 text-center">
     <h5 name="Title" class="mb-0">{{data.title}}</h5>
   </div>
 </div>
 
-<div name="divMessage" class="row ml-1 border-bt">
+<div name="divMessage" class="row border-bt text-center">
   <div name="divColMessage" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  mt-3 mb-3 ">
     <span>{{data.message}}</span>
   </div>
