--- a/src/app/modal/modal-confirms/modal-confirms.component.scss
+++ b/src/app/modal/modal-confirms/modal-confirms.component.scss
@@ -1,9 +1,9 @@
 ::ng-deep.mat-dialog-container {
     display: block !important;
-    padding: 24px !important;
+    padding: 5px !important;
     border-radius: 4px !important;
     box-sizing: border-box !important;
-    overflow: auto !important;
+    overflow: hidden !important;
     outline: 0 !important;
     width: 100% !important;
     height: 100% !important;
