--- a/src/app/pages/manage-member/manage-member.component.scss
+++ b/src/app/pages/manage-member/manage-member.component.scss
@@ -34,3 +34,7 @@
     opacity: 0.3 !important;
     transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
 }
+
+.text-wrap {
+    word-wrap: break-word;
+}
