--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,13 +1,16 @@
 <div name="divFormRegis" class="content">
-  <div name="divRowFormRegis" class="row mt-5">
-      <div name="divFormImage" class="col-md-7 col-sm-12">
-          <img name="image" class="cover" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png"
-              alt="">
+  <div name="divRowFormRegis" class="row display-size">
+    <div class="col-lg-8 col-md-7 d-none d-sm-none d-md-block d-lg-block" name="divFormImage">
+      <div style="display:block; width: 100%">
+        <slideshow [imageUrls]="images" [height]="'100vh'" [showArrows]="false" [autoPlay]="true"
+          [autoPlayInterval]="5500" [backgroundSize]="'cover'" [showDots]="true" [dotColor]="'#010101'"
+          [lazyLoad]="true" [autoPlayWaitForLazyLoad]="true" [hideOnNoSlides]="true">
+        </slideshow>
       </div>
+    </div>
 
-      <div name="divAuthRegis" class="col-md-5 col-sm-12">
-        <auth-register></auth-register>
-      </div>
+    <div class="col-lg-4 col-md-5 col-sm-12 position-ui" name="divAuthRegis">
+      <auth-register></auth-register>
+    </div>
   </div>
-  
 </div>
