--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -9,3 +9,13 @@
   width: 100%;
   height: 100%;
 }
+
+.display-size {
+  width: 100vw;
+}
+
+.position-ui {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
