--- a/src/app/modal/modal-add-box/modal-add-box.component.html
+++ b/src/app/modal/modal-add-box/modal-add-box.component.html
@@ -20,7 +20,7 @@
       style="height: 200px;">
       <div name="divForDetailProduct" class="row mt-3" *ngFor="let item of dataLabel.productall ;let i = index;">
         <div name="divCheckBox" class="col-2 ">
-          <mat-checkbox [disabled]="item.qtyAll === null" (change)="selectProduct($event,item,i)" name="nameCheckBox">
+          <mat-checkbox [disabled]="item.qtyAll === 0" (change)="selectProduct($event,item,i)" name="nameCheckBox">
           </mat-checkbox>
         </div>
         <div name="nameProduct" class="col-6">
@@ -29,8 +29,8 @@
         <div name="divQty" class="col-4">
           <form name="formQty" class="example-form border-top-0">
             <mat-form-field name="mat-form-field-qty" class="example-full-width border-top-0">
-              <input [disabled]="item.active || item.qtyAll === null" name="keyQty" (ngModelChange)="keyQty($event,i)"
-                [(ngModel)]="item.qtyAll === null ? 0 : item.qtyAll ? item.qtyAll : item.qty" matInput
+              <input [disabled]="item.active || item.qtyAll === 0" name="keyQty" (ngModelChange)="keyQty($event,i)"
+                [(ngModel)]="item.qtyAll === 0 ? 0 : item.qtyAll ? item.qtyAll : item.qty" matInput
                 placeholder="กรอกจำนวน">
             </mat-form-field>
           </form>
