--- a/src/app/modal/modal-confirms/modal-confirms.component.html
+++ b/src/app/modal/modal-confirms/modal-confirms.component.html
@@ -1,5 +1,5 @@
 <div name="divRowTitle" class="row border-bt">
-  <div name="divColTitle" class="col-12 mt-3 mb-3 text-center">
+  <div name="divColTitle" class="col-12 mb-3 text-center">
     <h5 name="Title" class="mb-0">{{data.title}}</h5>
   </div>
 </div>
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div name="divRowbtn" class="row mt-3 mb-3">
+<div name="divRowbtn" class="row mt-3">
   <div name="divColButtonCancel" class="col-6 text-left">
     <button class="ml-4" name="btnCancel" mat-stroked-button color="accent" (click)="onClickCancel()">ยกเลิก</button>
   </div>
