--- a/src/app/modal/modal-remark/modal-remark.component.html
+++ b/src/app/modal/modal-remark/modal-remark.component.html
@@ -1,5 +1,5 @@
 <div class="row ml-1 border-bt" name="divRowHeadRemark">
-  <div class="col-12 mt-3 mb-3 text-left" name="divColHeadRemark">
+  <div class="col-12 mb-3 text-left" name="divColHeadRemark">
     <h5 name="headRemark" class="mb-0">หมายเหตุ</h5>
   </div>
 </div>
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div name="rowbtn" class="row mt-3 mb-3">
+<div name="rowbtn" class="row mt-3">
   <div name="divBtnCancel" class="col-6 text-right">
     <button name="btnCancel" class="mr-4" mat-stroked-button color="accent" (click)="cancel()">ยกเลิก</button>
   </div>
