--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -111,7 +111,7 @@
                 <div *ngIf="user.roles[0]==='packstaff'" class="row" name="rowBtnLabel">
                   <div class="col-6 pl-0 pr-0" name="colBtnLabel">
                     <button mat-stroked-button color="accent" class="full-width btn-list-style"
-                      name="btnPrint">พิมพ์</button>
+                      name="btnPrint" (click)="printLabel(itm2)">พิมพ์</button>
                   </div>
                   <div class="col-6 pl-0 pr-0" name="colBtnLabel2">
                     <button mat-stroked-button color="accent" class="full-width btn-list-style"
